rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  ports:
  - port: 80
    name: http
    targetPort: 15672
  selector:
    app: rabbitmq
  type: LoadBalancer
